deploy code back to normal and like other running codes

--- a/.github/workflows/call-deploy-book.yml
+++ b/.github/workflows/call-deploy-book.yml
@@ -3,13 +3,13 @@ name: call-deploy-book
 on:
   push:
     branches:
-    - 'main'
+    - '**'
     # If your git repository has the Jupyter Book within some-subfolder next to
     # unrelated files, you can make this run only if a file within that specific
     # folder (or the workflow file itself) has been modified.
     #
     paths:
-    - book/main
+    - book/**
     - requirements.txt
     - .github/workflows/call-deploy-book.yml
   workflow_dispatch:
